popup styles/js

--- a/#src/_popup.html
+++ b/#src/_popup.html
@@ -1,7 +1,10 @@
-<div class="popup">
+<div id="popup"class="popup">
    <div class="popup__body">
       <div class="popup__content">
-         <a href="#!" class="popup__close">X</a>
-       
+         <a href="#" class="popup__close close-popup">X</a>
+      <h2 class="popup__title">PopUp #1</h2> 
+      <p class="popup__text">
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere provident ipsum asperiores recusandae omnis dolorem repellendus, magnam officia aperiam quisquam rem suscipit numquam? Dolorum porro, atque cupiditate ratione sapiente delectus.
+      </p> 
    </div>
 </div>
