--- a/#src/index.html
+++ b/#src/index.html
@@ -9,8 +9,12 @@
 <body>
    @@include('_header.html')
    <main class="main">
+      
    </main>
    @@include('_footer.html')
+   <div class="popup-wrapper">
+      <a href="popup" class="popup-link">Popup</a>
+   </div>
    @@include('_popup.html')
    <script src="js/main.min.js"></script>
 </body>
